$Adding initial documentation files

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Dr Muhammad Kazim
-site_url: https://inha-autonomous-systems-laboratory-asl.github.io/asl_docs/
+site_url: https://kazimbalti.github.io/786/
 theme:
   name: material
   features:
